Refactor OpenShift AI tests to use getFirst() for request retrieval